<resources>
    <string name="app_name">Atividade2</string>
    <string name="nome">Nome:</string>
    <string name="idade">Idade:</string>
    <string name="peso">Peso (kg):</string>
    <string name="altura">Altura (m):</string>
    <string name="report">Relatório Nutricional</string>
    <string name="imc">IMC:</string>
    <string name="classificacao">Classificação:</string>
    <string name="newCalc">Realizar novo Cálculo</string>
</resources>